website template edited

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
   <main>                             <!-- Main content area of the page -->
     <div class="project-meta">2025</div>     <!-- Project year/date -->
-    <div class="project-title">Project Title</div>  <!-- Main project title -->
-    <div class="project-subtitle">Student Name</div>  <!-- Student name as subtitle -->
+    <div class="project-title">Amethysae</div>  <!-- Main project title -->
+    <div class="project-subtitle">Romayssae El Idrissi</div>  <!-- Student name as subtitle -->
     
     <!-- Content sections -->
-    <div class="section-title">Interactive Demo</div>  <!-- Section heading -->
-    <p>Click the button below to see JavaScript in action:</p>  <!-- Instructions for user -->
-    <button id="demoButton">Click Me!</button>  <!-- Interactive button with unique ID -->
+    <div class="section-title">Purple Realities</div>  <!-- Section heading -->
+    <p>Click to teleport to the amethyst dimension:</p>  <!-- Instructions for user -->
+    <button id="demoButton">Teleport Me!</button>  <!-- Interactive button with unique ID -->
     <div id="messageDisplay"></div>  <!-- Empty container for JavaScript to fill with messages -->
   </main>
   
