--- a/index.html
+++ b/index.html
@@ -1,33 +1,448 @@
-<!DOCTYPE html>                      <!-- Declares this is an HTML5 document -->
-<html lang="en">                     <!-- Root element, lang="en" specifies English language -->
-<head>                               <!-- Contains metadata about the page (not visible) -->
-  <meta charset="UTF-8">             <!-- Sets character encoding for special characters -->
-  <title>Module 1</title>            <!-- Title that appears in browser tab -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">  <!-- Load Google Fonts -->
-  <link rel="stylesheet" href="style.css">  <!-- Links to our CSS file for styling -->
-</head>
-<body>                               <!-- Contains all visible content on the page -->
-  <header>                           <!-- Header section for navigation/branding -->
-    <div class="left">Columbia GSAPP</div>  <!-- Left side of header with institution name -->
-    <div class="center">             <!-- Center section of header -->
-      Computational Design Practices<br>    <!-- Main title with line break -->
-      <span>Project Archive</span>   <!-- Subtitle in smaller text -->
-    </div>
-    <div class="right"><a href="#">About</a></div>  <!-- Right side with navigation link -->
-  </header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Module 1</title>
 
-  <main>                             <!-- Main content area of the page -->
-    <div class="project-meta">2025</div>     <!-- Project year/date -->
-    <div class="project-title">Amethysae</div>  <!-- Main project title -->
-    <div class="project-subtitle">Romayssae El Idrissi</div>  <!-- Student name as subtitle -->
-    
-    <!-- Content sections -->
-    <div class="section-title">Purple Realities</div>  <!-- Section heading -->
-    <p>Click to teleport to the amethyst dimension:</p>  <!-- Instructions for user -->
-    <button id="demoButton">Teleport Me!</button>  <!-- Interactive button with unique ID -->
-    <div id="messageDisplay"></div>  <!-- Empty container for JavaScript to fill with messages -->
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
+
+  <!-- p5.js for 2D Canvases -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+
+  <!-- Three.js for 3D Canvases -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
+  <!-- Three.js Font Loader -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/jsm/loaders/FontLoader.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/jsm/geometries/TextGeometry.min.js"></script>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 40px 20px;
+      font-family: 'Roboto', sans-serif;
+      color: white;
+      background-image: url('background.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      position: relative;
+      min-height: 100vh;
+    }
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.3);
+      z-index: -1;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 20px;
+      border-bottom: 1px solid white;
+      font-size: 16px;
+      margin-bottom: 40px;
+      position: relative;
+      z-index: 1;
+    }
+    header .left,
+    header .center,
+    header .center span,
+    header .right a {
+      color: white;
+    }
+    header .center {
+      font-weight: 400;
+      text-align: center;
+      font-size: 18px;
+    }
+    header .center span {
+      font-size: 14px;
+    }
+    main {
+      max-width: 800px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 1;
+    }
+    .project-meta {
+      font-size: 16px;
+      margin-bottom: 8px;
+    }
+    .project-title {
+      font-size: 28px;
+      font-weight: 400;
+      margin-bottom: 8px;
+    }
+    .project-subtitle {
+      font-size: 20px;
+      margin-bottom: 40px;
+    }
+    .section-title {
+      font-weight: 700;
+      text-transform: uppercase;
+      margin-top: 40px;
+      margin-bottom: 12px;
+      font-size: 18px;
+    }
+    p {
+      font-size: 18px;
+      line-height: 1.7;
+      margin-bottom: 20px;
+    }
+    button {
+      background-color: rgba(255,255,255,0.1);
+      color: white;
+      border: 1px solid white;
+      padding: 14px 28px;
+      font-size: 16px;
+      font-weight: 400;
+      cursor: pointer;
+      border-radius: 4px;
+      margin-bottom: 20px;
+      transition: background-color 0.3s;
+    }
+    button:hover {
+      background-color: rgba(255,255,255,0.3);
+    }
+    #messageDisplay {
+      font-size: 18px;
+      line-height: 1.7;
+      padding: 18px;
+      border: 1px solid white;
+      background-color: rgba(255,255,255,0.1);
+      border-radius: 4px;
+      min-height: 24px;
+      margin-bottom: 60px;
+    }
+    .canvas-box {
+      margin: 40px auto;
+      background-color: #fff;
+      border-radius: 8px;
+      padding: 0;
+      width: 620px;
+      height: 320px;
+      box-shadow: 0 0 15px rgba(58,26,75,0.6);
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+      margin: 0 auto;
+      background-color: transparent !important;
+      border-radius: 8px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="left">Columbia GSAPP</div>
+    <div class="center">
+      Computational Design Practices<br />
+      <span>Project Archive</span>
+    </div>
+    <div class="right"><a href="#">About</a></div>
+  </header>
+  <main>
+    <div class="project-meta">2025</div>
+    <div class="project-title">Amethysae</div>
+    <div class="project-subtitle">Romayssae El Idrissi</div>
+
+    <div class="section-title">Purple Realities</div>
+    <p>Click to teleport to the amethyst dimension:</p>
+    <button id="demoButton">Teleport Me!</button>
+    <div id="messageDisplay"></div>
+
+    <!-- 2D Canvases -->
+    <div id="canvasContainer1" class="canvas-box"></div>
+    <div id="canvasContainer2" class="canvas-box"></div>
+
+    <!-- 3D Canvases -->
+    <div id="canvasContainer3" class="canvas-box"></div>
+    <div id="canvasContainer4" class="canvas-box"></div>
   </main>
-  
-  <script src="script.js"></script>  <!-- Links to our JavaScript file for interactivity -->
+
+  <!-- Teleport Button Script -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const button = document.getElementById('demoButton');
+      const messageArea = document.getElementById('messageDisplay');
+      button.addEventListener('click', function () {
+        const messages = [
+          '🔮 Initiating teleportation...',
+          '🔮 Entering amethyst currents...',
+          '🔮 Floating through violet light...',
+          '🔮 Still teleporting... hold still...',
+          '🔮 Coordinates realigning...'
+        ];
+        let index = 0;
+        messageArea.textContent = messages[index];
+        button.textContent = 'Teleporting...';
+        if (button.teleportInterval) clearInterval(button.teleportInterval);
+        button.teleportInterval = setInterval(() => {
+          index = (index + 1) % messages.length;
+          messageArea.textContent = messages[index];
+        }, 1500);
+      });
+    });
+  </script>
+
+  <!-- p5.js Sketches -->
+  <script>
+    // Canvas 1: Circles
+    new p5(p => {
+      class Circle {
+        constructor(x,y,s,speed){
+          this.x = x; this.y = y; this.s = s; this.speed = speed;
+        }
+        move(){
+          this.x += this.speed;
+          if(this.x > p.width+this.s) this.x=-this.s;
+        }
+        display(){
+          p.fill(100,0,130,200);
+          p.noStroke();
+          p.ellipse(this.x,this.y,this.s);
+        }
+      }
+      let circles=[];
+      p.setup=()=> {
+        let c=p.createCanvas(620,320);
+        c.parent('canvasContainer1');
+        circles.push(new Circle(50,p.height/3,50,2));
+        circles.push(new Circle(150,p.height/2,70,1.5));
+        circles.push(new Circle(250,(2*p.height)/3,90,1));
+      };
+      p.draw=()=>{
+        p.background(255);
+        circles.forEach(c=>{c.move(); c.display();});
+      };
+    });
+
+    // Canvas 2: Stars
+    new p5(p => {
+      class Star {
+        constructor(x,y,s){
+          this.x=x; this.y=y; this.s=s;
+          this.b=p.random(100,255);
+          this.bc=p.random(1,3);
+        }
+        twinkle(){
+          this.b+=this.bc;
+          if(this.b>255||this.b<100)this.bc*=-1;
+        }
+        display(){
+          p.fill(90,30,150,this.b);
+          p.noStroke();
+          p.ellipse(this.x,this.y,this.s);
+        }
+      }
+      let stars=[];
+      p.setup=()=>{
+        let c=p.createCanvas(620,320);
+        c.parent('canvasContainer2');
+        for(let i=0;i<60;i++)
+          stars.push(new Star(p.random(p.width),p.random(p.height),p.random(5,15)));
+      };
+      p.draw=()=>{
+        p.background(255);
+        stars.forEach(s=>{s.twinkle();s.display();});
+      };
+    });
+  </script>
+
+  <!-- Three.js Sketches -->
+  <script>
+    // Canvas 3: Rotating violet torus knot
+  (function(){
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, 620/320, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer({antialias:true, alpha:true});
+    renderer.setSize(620, 320);
+    document.getElementById('canvasContainer3').appendChild(renderer.domElement);
+
+    const geometry = new THREE.TorusKnotGeometry(1, 0.3, 100, 16);
+    const material = new THREE.MeshStandardMaterial({
+      color: 0x7F3FBF,
+      metalness: 0.6,
+      roughness: 0.4
+    });
+    const mesh = new THREE.Mesh(geometry, material);
+    scene.add(mesh);
+
+    const light = new THREE.PointLight(0xffffff, 1);
+    light.position.set(5,5,5);
+    scene.add(light);
+    camera.position.z = 5;
+
+    function animate(){
+      requestAnimationFrame(animate);
+      mesh.rotation.x +=0.01;
+      mesh.rotation.y +=0.01;
+      renderer.render(scene, camera);
+    }
+    animate();
+  })();
+
+// Canvas 4: Large amethysts with gentle mouse movement and slow floating, no auto rotation
+(function(){
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(75, 620/320, 0.1, 1000);
+  const renderer = new THREE.WebGLRenderer({antialias:true, alpha:true});
+  renderer.setSize(620,320);
+  document.getElementById('canvasContainer4').appendChild(renderer.domElement);
+
+  // Create amethyst-like icosahedron cluster
+  const geometry = new THREE.IcosahedronGeometry(1.3, 0);
+  const material = new THREE.MeshStandardMaterial({
+    color: 0x9F5FFF,
+    flatShading: true,
+    metalness: 0.3,
+    roughness: 0.6,
+  });
+
+  const cluster = new THREE.Group();
+  const count = 25;
+  for(let i = 0; i < count; i++){
+    let mesh = new THREE.Mesh(geometry, material);
+    mesh.position.set(
+      (Math.random() - 0.5) * 12,
+      (Math.random() - 0.5) * 8,
+      (Math.random() - 0.5) * 10
+    );
+    mesh.rotation.set(
+      Math.random() * Math.PI,
+      Math.random() * Math.PI,
+      Math.random() * Math.PI
+    );
+    let scale = 1 + Math.random() * 0.7;
+    mesh.scale.set(scale, scale, scale);
+    cluster.add(mesh);
+  }
+  scene.add(cluster);
+
+  // Lighting
+  const light = new THREE.PointLight(0xffffff, 1);
+  light.position.set(5,5,5);
+  scene.add(light);
+  const ambientLight = new THREE.AmbientLight(0x8844ff, 0.3);
+  scene.add(ambientLight);
+
+  camera.position.z = 10;
+
+  // Smooth mouse movement targets
+  let targetX = 0, targetY = 0;
+  let currentX = 0, currentY = 0;
+
+  // Zoom state and smooth zooming
+  let zoomedIn = false;
+  const zoomTargetZ = 5;
+  const zoomNormalZ = 10;
+  let currentCameraZ = zoomNormalZ;
+  const zoomSpeed = 0.08;
+
+  // Rotation velocity for smooth dragging
+  let rotation = { x: 0, y: 0 };
+  let rotationVelocity = { x: 0, y: 0 };
+
+  // Dragging state
+  let isDragging = false;
+  let previousMouse = { x: 0, y: 0 };
+
+  // Mouse move handler
+  document.getElementById('canvasContainer4').addEventListener('mousemove', (event) => {
+    const rect = renderer.domElement.getBoundingClientRect();
+    const mouseX = ((event.clientX - rect.left) / rect.width) * 2 - 1;
+    const mouseY = -(((event.clientY - rect.top) / rect.height) * 2 - 1);
+
+    if (!zoomedIn) {
+      targetX = mouseX;
+      targetY = mouseY;
+    } else if (isDragging) {
+      const deltaX = event.clientX - previousMouse.x;
+      const deltaY = event.clientY - previousMouse.y;
+
+      // Update rotation velocity with smoothing
+      rotationVelocity.y += deltaX * 0.0025;
+      rotationVelocity.x += deltaY * 0.0025;
+
+      previousMouse = { x: event.clientX, y: event.clientY };
+    }
+  });
+
+  // Mouse down to start drag
+  document.getElementById('canvasContainer4').addEventListener('mousedown', (event) => {
+    if (zoomedIn) {
+      isDragging = true;
+      previousMouse = { x: event.clientX, y: event.clientY };
+    }
+  });
+
+  // Mouse up to stop drag
+  document.addEventListener('mouseup', () => {
+    isDragging = false;
+  });
+
+  // Click toggles zoom
+  document.getElementById('canvasContainer4').addEventListener('click', () => {
+    zoomedIn = !zoomedIn;
+  });
+
+  const clock = new THREE.Clock();
+
+  function animate(){
+    requestAnimationFrame(animate);
+    const elapsed = clock.getElapsedTime();
+
+    // Smooth lerp mouse movement (zoomed out)
+    if (!zoomedIn) {
+      currentX += (targetX - currentX) * 0.1;
+      currentY += (targetY - currentY) * 0.1;
+    }
+
+    // Smooth zoom
+    currentCameraZ += (zoomedIn ? zoomTargetZ : zoomNormalZ - currentCameraZ) * zoomSpeed;
+    camera.position.z = currentCameraZ;
+
+    // Floating effect
+    cluster.position.y = 0.4 * Math.sin(elapsed * 1.2);
+
+    if (!zoomedIn) {
+      // Slight cluster position movement
+      cluster.position.x = currentX * 5;
+      cluster.position.z = currentY * 5;
+
+      // Decay rotation velocity smoothly to zero
+      rotationVelocity.x *= 0.9;
+      rotationVelocity.y *= 0.9;
+
+      // Apply rotation velocity to rotation
+      rotation.x += rotationVelocity.x;
+      rotation.y += rotationVelocity.y;
+
+      // Slowly bring rotation back to zero
+      rotation.x += (0 - rotation.x) * 0.05;
+      rotation.y += (0 - rotation.y) * 0.05;
+    } else {
+      // When zoomed in and not dragging, apply damping to rotation velocity
+      if (!isDragging) {
+        rotationVelocity.x *= 0.92;
+        rotationVelocity.y *= 0.92;
+        rotation.x += rotationVelocity.x;
+        rotation.y += rotationVelocity.y;
+      }
+    }
+
+    // Apply rotation
+    cluster.rotation.x = rotation.x;
+    cluster.rotation.y = rotation.y;
+
+    renderer.render(scene, camera);
+  }
+  animate();
+})();
+  </script>
 </body>
 </html>
